# agent-flight-recorder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
agent_flight_recorder/: __init__.py  cli.py
docs/: AGENT_HANDOFF.md  DEMO_SCRIPT.md  LAUNCH_CHECKLIST.md  LAUNCH_POSTS.md  RECORDING_PLAN.md  TERMINAL_DEMO.md  cli.md  memory-firewall.md  special-agent-ops-integration.md
examples/: sample-report.md
examples/basic-run/: README.md
schemas/: checks.schema.json  flight-record.schema.json
scripts/: afr.ps1  afr.sh  smoke_test.py
templates/: FINAL_REPORT.md  MISSION.md  PLAN.md  ROLLBACK.md
