[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "local-first black box recorder for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
afr = "agent_flight_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_flight_recorder*"]
